<resources>
    <string name="app_name">Click Control</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_text">LOGOUT</string>
    <string name="add_check_in">Add CheckIn Time</string>
    <string name="add_check_out">Add CheckOut Time</string>
    <string name="add_check_lunch">Add Lunch Time</string>
    <string name="title_activity_login">Click Control</string>
    <string name="select_all_text">Select All</string>

    <!-- Strings related to login -->
    <string name="employee_text">Employee</string>
    <string name="admin_text">Admin</string>
    <string name="no_account_text">Don\'t have an account? register here.</string>
    <string name="prompt_user_name">Name</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_registration_key">Registration Key</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobile">This mobileNo number is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_registration_key">This registration key is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="home_nav_text">HOME</string>
    <string name="profile_nav_text">PROFILE</string>
    <string name="map_nav_text">MAP</string>
    <string name="roster_nav_text">ROSTER</string>
    <string name="settings_nav_text">SETTINGS</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="location_head_text">Location</string>
    <string name="email_head_text">Email</string>4
    <string name="mobile_head_text">Mobile</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="com_appsee_apikey" translatable="false">2600a1390f744014ba8ee643949d7432</string>
    <string name="title_activity_employee_register">Sign in</string>
</resources>
